pref: 改进 PlayerDataType 的采集线程成本.